--- a/PATH2iot/PATHdeployer/input/pathDeployer_template.conf
+++ b/PATH2iot/PATHdeployer/input/pathDeployer_template.conf
@@ -1,12 +1,15 @@
 # Optimiser socket port
-OPTI_SOCKET_PORT=
+OPTI_SOCKET_PORT=7985
+
+# Infrastructure description
+INFRA_DEF=input/infrastructure_current_state.json
 
 # ZooKeeper
 ZOO_IP=
-ZOO_PORT=
-ZOO_APP_NODE=
+ZOO_PORT=2181
+ZOO_APP_NODE=/path2iot
 
 # IoT deployment
 REST_IP=
-REST_PORT=
-REST_ENDPOINT=
+REST_PORT=5000
+REST_ENDPOINT=path2iot/set_config
